--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChitChat_newVersion">
 
+        <activity android:name=".activities.ForgotPasswordActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize"/>
+
+        <activity android:name=".activities.ResetPasswordActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize"/>
+
+        <activity android:name=".activities.askSafetyQuestionActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize"/>
+
         <activity
             android:name=".activities.ChatActivity"
             android:exported="true"
